@@ -18,18 +18,20 @@ body,td,th {
     <br />
   JCpg Help Page</p>
   <p align="left">* About<br />
-    <br />
-  * The layout<br />
       <br />
+    * Starting JCpg for the first time<br />
+    <br />
+    * The layout<br />
+    <br />
     * Online vs offline<br />
     <br />
     * Adding categories<br />
-  * Adding albums<br />
-  * Adding pictures<br />
-  <br />
-  * Deleting categories<br />
-  * Deleting albums<br />
-  * Deleting pictures<br />
+    * Adding albums<br />
+    * Adding pictures<br />
+    <br />
+    * Deleting categories<br />
+    * Deleting albums<br />
+    * Deleting pictures<br />
     <br />
     * Editing category information<br />
     * Editing album information<br />
@@ -57,11 +59,20 @@ body,td,th {
   <p align="left"><strong>About<br />
   </strong>Coppermine Photo Gallery is one of the most popular and most used photo galleries in the world. Whenever you are online, you can access your Coppermine site to upload your pictures and share them with the rest of the world.<br />
   The problem is that when you are not online, accessing your Coppermine will not be possible. JCpg solves this problem. You can use this program to offline add categories, albums and pictures. Whenever you come across an Internet connection, all you have to do is hit the sync button and all information will be send to your Coppermine site.</p>
+  <p align="left"><strong>Starting JCpg for the first time<br />
+  </strong>When you first start JCpg, you will not be able to go offline. This is because JCpg will first need to download your Coppermine site's configuration so it can work properly. So be sure to be connected to the Internet when first launching JCpg.<br />
+  To go online, JCpg needs some crucial information from you. First type in the url to your Coppermine site. For example: http://www.my-coppermine-site.com/. Then also fill in your username and password and click on connect. From now on, your site's configuration is saved and you will be able to work in offline mode. To do this, just click offline when launching JCpg.</p>
   <p align="left"><strong>The layout<br />
   </strong>We wanted to make JCpg's layout as simple as possible. When you first started JCpg, you might have noticed that there aren't a lot of windows and buttons. At the left hand side, you see a tree which represents the  state of your site's structure as it was when you last synced all information. The root can contain categories and albums. Each category can also contain categories and albums. Albums can contain pictures. In the root, by default there is a category named 'User Galleries'. All elements in this category will appear on the home page of your Coppermine site.<br />
       <br />
-    On the right hand side, different things can be shown. If you select a category in the tree, you will enter something we call 'Album view'. <br />
-  </p>
+    On the right hand side, different things can be shown. If you select a category in the tree, you will enter something we call 'Album view'. The program selects the first picture of each album in this category and shows it on the right hand side. This way, you have a quick overview of the albums in this category. Clicking on one of this albums or on an album in the tree, will show all the pictures of this album on the right hand side. Selecting a picture on the right hand side or in the tree will show the picture on the right hand side.<br />
+    When selecting a picture, you will enter something we call 'Photo view'. You will now be able to edit the photo. Under the photo, a couple of buttons will appear. Going over them with the mouse will tell you what the button does. From left to right: rotate, crop, resize, other effects and go back to the previous view to see all the pictures of the selected album.<br />
+      <br />
+  Under the tree, four other buttons can be found. From left to right: sync all your elements, add an element, delete an element and preview an album.</p>
+  <p align="left"><strong>Online vs offline<br />
+  </strong>When you launch JCpg, you will be able to choose between going offline or online. You can only go online if you are connected to the Internet. JCpg will try to establish a connection with your Coppermine site. If no Internet connection is available, select offline.</p>
+  <p align="left"><strong>Adding categories</strong><br />
+  Categories can be added to the 'root' and to other categories. Just select the right element and press the + button. A new window will appear where you must give your new category a name and optionally add a description.</p>
 </div>
 </body>
 </html>
